tests/baselines/reference/parserVariableDeclaration4.errors.txt
tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration4.ts(2,4): error TS1038: A 'declare' modifier cannot be used in an already ambient context.


==== tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration4.ts (1 errors) ====
    declare module M {
       declare var v;
       ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
    }